<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Burstcoin Explorer</string>
    <string name="title_explore">Explore</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_events">Events</string>
    <string name="title_observe">Observe</string>
    <string name="title_view_block_details">View Block</string>
    <string name="title_view_block_extra_details">View Block Transactions</string>
    <string name="title_view_account_details">View Account</string>
    <string name="title_view_account_transactions">View Account Transactions</string>
    <string name="title_view_transaction_details">View Transaction</string>
    <string name="loading">Loading…</string>
    <string name="loading_error">Error loading</string>
    <string name="price_fiat">1 BURST = %1$s</string>
    <string name="price_btc">Price (BTC):</string>
    <string name="market_capital">Market Capital:</string>
    <string name="block_height">Block Height:</string>
    <string name="block_number">Block Number:</string>
    <string name="recent_blocks">Recent blocks:</string>
    <string name="recent_blocks_loading">Loading recent blocks…</string>
    <string name="recent_blocks_error">Error loading recent blocks.</string>
    <string name="block_number_with_data">Block #%1$s</string>
    <string name="transaction_id_with_data">Transaction #%1$s</string>
    <string name="block_id">Block ID:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="number_of_transactions">No. of Transactions:</string>
    <string name="number_of_transactions_with_data">%1$s transactions totaling %2$s</string>
    <string name="transaction_view_info_from">%1$s from %2$s</string>
    <string name="transaction_view_info_to">%1$s to %2$s</string>
    <string name="total_value">Total Value:</string>
    <string name="size_bytes">Size (Bytes):</string>
    <string name="block_generator">Block Generator:</string>
    <string name="reward_recipient">Reward Recipient:</string>
    <string name="address_display_format">%1$s (%2$s)</string>
    <string name="transaction_count_display_format">%1$s in %2$s transactions</string>
    <string name="blocks_mined_count_display_format">%1$s in %2$s blocks</string>
    <string name="total_fee">Total Transaction Fees:</string>
    <string name="address">Address:</string>
    <string name="public_key">Public Key:</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="balance">Balance:</string>
    <string name="forged_balance">Forged balance:</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="sender">Sender:</string>
    <string name="recipient">Recipient:</string>
    <string name="amount">Amount:</string>
    <string name="transaction_type">Transaction Type:</string>
    <string name="transaction_subtype">Subtype:</string>
    <string name="fee">Fee:</string>
    <string name="confirmations">Confirmations:</string>
    <string name="full_hash">Full hash:</string>
    <string name="signature">Signature:</string>
    <string name="signature_hash">Signature hash:</string>
    <string name="block_reward">Block reward:</string>
    <string name="transactions">Transactions:</string>
    <string name="transactions_loading">Loading transactions…</string>
    <string name="transactions_error">Error loading transactions.</string>
    <string name="transactions_empty">No transactions.</string>
    <string name="view_transactions">View Transactions</string>
    <string name="load_more">Load more</string>
    <string name="save_account">Pin Account</string>
    <string name="unsave_account">Unpin Account</string>
    <string name="pinned_accounts">Pinned accounts:</string>
    <string name="pinned_accounts_empty">No pinned accounts.</string>
    <string name="unknown_balance">Balance unknown</string>
    <string name="unknown_name">Name unknown</string>
    <string name="error_account_already_in_database">Account is already saved.</string>
    <string name="error_account_not_in_database">Account is not saved.</string>
    <string name="error_burst_rs_invalid">Invalid Burst Address.</string>
    <string name="saved_account_details_display_format">Name: %1$s, Balance: %2$s</string>
    <string name="burst_rs_hint">BURST-XXXX-XXXX-XXXX-XXXXX</string>
    <string name="save">Save</string>
    <string name="not_set">Not set</string>
    <string name="search">Search</string>
    <string name="search_hint">Block / Account / Transaction</string>
    <string name="searching">Searching…</string>
    <string name="search_invalid">Not a valid query. Valid queries are: Account address, Account ID, Block number, Block ID, Transaction ID.</string>
    <string name="search_no_connection">Could not search, either search term does not exist or there was an error loading the search result (Are you connected?)</string>
    <string name="settings">Settings</string>
    <string name="event_complete">%1$s complete!</string>
    <string name="event_description_format">%1$s at block %2$s (%3$s blocks away, approx. %4$s)</string>
    <string name="event_height_not_set">Event block height not set.</string>
    <string name="event_info_unavailable">Event info unavailable.</string>
    <string name="countdown_format">%1$s %2$s, %3$s %4$s and %5$s %6$s</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="observe_peer_status">Peers Status</string>
    <string name="observe_peer_versions">Peer Versions</string>
    <string name="observe_map">Peer Locations</string>
    <string name="observe_broken_peers">Broken Peers</string>
    <string name="observe_load_error">Error loading: %1$s. Please check network connection.</string>
    <string name="observe_broken_reason_fork">forking</string>
    <string name="observe_broken_reason_resync">resyncing</string>
    <string name="observe_broken_reason_unreachable">unreachable</string>
    <string name="observe_broken_reason_stuck">stuck</string>
    <string name="observe_status_fork">Fork (%1$s%%)</string>
    <string name="observe_status_resync">Resync (%1$s%%)</string>
    <string name="observe_status_unreachable">Unreachable (%1$s%%)</string>
    <string name="observe_status_stuck">Stuck (%1$s%%)</string>
    <string name="observe_status_valid">Valid (%1$s%%)</string>
    <string name="observe_center_text">%1$s: %2$s</string>
    <string name="observe_center_text_empty">Select a segment to view details</string>
    <string name="observe_node_label">%1$s (%2$s%%)</string>
    <string name="observe_node_count">%1$s Nodes</string>
    <string name="observe_broken_peer_description">Version %1$s on %2$s platform in %3$s, %4$s at block %5$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="transaction_type_payment">Payment</string>
    <string name="transaction_type_payment_ordinary">Ordinary payment</string>
    <string name="transaction_type_payment_ordinary_multi_out">Multi-out payment</string>
    <string name="transaction_type_payment_ordinary_multi_same_out">Multi-same-out payment</string>
    <string name="transaction_type_messaging">Messaging</string>
    <string name="transaction_type_messaging_arbitrary_message">Arbitrary Message / Account Info</string>
    <string name="transaction_type_messaging_alias_assignment">Alias assignment</string>
    <string name="transaction_type_messaging_account_info">Account Info</string>
    <string name="transaction_type_messaging_alias_sell">Sell Alias</string>
    <string name="transaction_type_messaging_alias_buy">Buy Alias</string>
    <string name="transaction_type_colored_coins">Colored coins</string>
    <string name="transaction_type_colored_coins_asset_issuance">Asset Issuance</string>
    <string name="transaction_type_colored_coins_asset_transfer">Asset Transfer</string>
    <string name="transaction_type_colored_coins_ask_order_placement">Requested order placement</string>
    <string name="transaction_type_colored_coins_bid_order_placement">Bid on order placement</string>
    <string name="transaction_type_colored_coins_ask_order_cancellation">Requested order cancellation</string>
    <string name="transaction_type_colored_coins_bid_order_cancellation">Bid on order cancellation</string>
    <string name="transaction_type_digital_goods">Digital goods</string>
    <string name="transaction_type_digital_goods_listing">Listing created</string>
    <string name="transaction_type_digital_goods_delisting">Listing deleted</string>
    <string name="transaction_type_digital_goods_price_change">Listing price changed</string>
    <string name="transaction_type_digital_goods_quantity_change">Listing quantity changed</string>
    <string name="transaction_type_digital_goods_purchase">Listing purchased</string>
    <string name="transaction_type_digital_goods_delivery">Listing delivered</string>
    <string name="transaction_type_digital_goods_feedback">Listing feedback given</string>
    <string name="transaction_type_digital_goods_refund">Listing refund issued</string>
    <string name="transaction_type_account_control">Account control</string>
    <string name="transaction_type_account_control_effective_balance_leasing">Effective Balance Leasing</string>
    <string name="transaction_type_mining">Mining</string>
    <string name="transaction_type_mining_reward_recipient_assignment">Reward Recipient Assignment</string>
    <string name="transaction_type_advanced_payment_escrow_creation">Escrow Creation</string>
    <string name="transaction_type_advanced_payment_escrow_sign">Escrow Sign</string>
    <string name="transaction_type_advanced_payment_escrow_result">Escrow Result</string>
    <string name="transaction_type_advanced_payment_subscription_subscribe">Subscribed to subscription</string>
    <string name="transaction_type_advanced_payment_subscription_cancel">Subscription cancelled</string>
    <string name="transaction_type_advanced_payment_subscription_payment">Subscription payment</string>
    <string name="transaction_type_automated_transactions">Automated Transactions</string>
    <string name="transaction_type_automated_transactions_create">AT Creation</string>
    <string name="transaction_type_automated_transactions_payment">AT Payment</string>
    <string name="burst_links">Burstcoin Links</string>
    <string name="app_links">App Links</string>
    <string name="burst_wallet">Download Burst Wallet</string>
    <string name="burst_wallet_summary">Burstcoin Wallet for Android</string>
    <string name="burst_telegram">Burstcoin Telegram</string>
    <string name="burst_telegram_summary">Official Burstcoin Telegram</string>
    <string name="burst_website">Burstcoin Website</string>
    <string name="burst_website_summary">Official Burstcoin Website</string>
    <string name="burst_pocc_explorer">Burstcoin Explorer by PoCC</string>
    <string name="burst_pocc_explorer_summary">A web-based Burstcoin explorer provided by the PoC Consortium</string>
    <string name="cryptoguru_discord">Cryptoguru Discord</string>
    <string name="cryptoguru_discord_summary">The official Discord server of the PoC Consortium</string>
    <string name="burst_wiki">Burst Wiki</string>
    <string name="burst_wiki_summary">Community run Burstcoin Wiki</string>
    <string name="app_github">View on GitHub</string>
    <string name="app_github_summary">We\'re open source!</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_summary">View who has contributed to this project</string>
    <string name="app_version">App version</string>
    <string name="preferences">Preferences</string>
    <string name="currency">Fiat Currency</string>
</resources>