<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences">

        <ListPreference
            android:title="@string/currency"
            android:key="@string/currency" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/burst_links">

        <Preference android:title="@string/burst_wallet"
            android:summary="@string/burst_wallet_summary"
            android:key="@string/burst_wallet"/>

        <Preference android:title="@string/burst_website"
            android:summary="@string/burst_website_summary"
            android:key="@string/burst_website"/>

        <Preference android:title="@string/burst_wiki"
            android:summary="@string/burst_wiki_summary"
            android:key="@string/burst_wiki"/>

        <Preference android:title="@string/burst_telegram"
            android:summary="@string/burst_telegram_summary"
            android:key="@string/burst_telegram"/>

        <Preference android:title="@string/cryptoguru_discord"
            android:summary="@string/cryptoguru_discord_summary"
            android:key="@string/cryptoguru_discord"/>

        <Preference android:title="@string/burst_pocc_explorer"
            android:summary="@string/burst_pocc_explorer_summary"
            android:key="@string/burst_pocc_explorer"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_links">

        <Preference android:title="@string/app_github"
            android:summary="@string/app_github_summary"
            android:key="@string/app_github"/>

        <Preference android:title="@string/contributors"
            android:summary="@string/contributors_summary"
            android:key="@string/contributors"/>

        <!-- <Preference android:title="@string/app_donate"
            android:summary="@string/app_donate_summary"
            android:key="@string/app_donate"/> :( -->

        <Preference android:title="@string/app_version"
            android:key="@string/app_version"/>

    </PreferenceCategory>
</PreferenceScreen>
