<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/explore_swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/explore_price_fiat"
            android:text="@string/price_fiat"
            android:textSize="@dimen/text_title"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/price_btc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_left"/>

            <TextView
                android:id="@+id/explore_price_btc_value"
                android:text="@string/loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/market_capital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_left"/>

            <TextView
                android:id="@+id/explore_market_cap_value"
                android:text="@string/loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/block_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_left"/>

            <TextView
                android:id="@+id/explore_block_height_value"
                android:text="@string/loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_right"/>

        </LinearLayout>

        <TextView
            android:id="@+id/explore_blocks_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:text="@string/recent_blocks_loading"
            android:textSize="@dimen/text_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/explore_blocks"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>