<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accounts_swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accounts_list_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:text="@string/pinned_accounts"
            android:textSize="@dimen/text_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accounts_list"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/accounts_new_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/burst_rs_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/accounts_new_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>